--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,31 @@
-name: Run tests and upload coverage
+name: Run Jest tests and upload coverage
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   test:
-    runs-on: ubuntu-lateststeps:
-  - uses: actions/checkout@main
-  - uses: codecov/codecov-action@v5
-    with:
-      fail_ci_if_error: true # optional (default = false)
-      files: ./coverage1.xml,./coverage2.xml # optional
-      flags: unittests # optional
-      name: codecov-umbrella # optional
-      token: ${{ secrets.ACTIONSECRET }}
-      verbose: true # optional (default = false)
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests with coverage
+        run: npm test
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.ACTIONSECRET }}
+          slug: RayanElka/cloudActions
