--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,15 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        working-directory: vraag3
 
       - name: Run tests with coverage
         run: npm test
+        working-directory: vraag3
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.ACTIONSECRET }}
           slug: RayanElka/cloudActions
+          working-directory: vraag3
