--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,49 @@
-name: Run Jest tests and upload coverage
+# This is a basic workflow to help you get started with Actions
 
+name: vraag3
+
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  test:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4
 
+       # Setup Node.js
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: '18'
 
+      # Installeer dependencies
       - name: Install dependencies
         run: npm install
-        working-directory: ./vraag3
 
+      # Voer tests uit met coverage
       - name: Run tests with coverage
-        run: npm test
-        working-directory: ./vraag3
+        run: npm test -- --coverage
 
+     # Upload coverage naar Codecov
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.ACTIONSECRET }}
-          slug: RayanElka/cloudActions
-          working-directory: ./vraag3
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: false
